syntax = "proto3";

package articleCurator;

service messageQueue {
    rpc sendMessage (ClientMessage) returns (ServerAcknowledgement);
    rpc susbcribe(Topic) returns (stream ServerMessage);
}

message ClientMessage {
    string topic = 1;
    string data = 2;
    bool isPersistent = 3;
}

message ServerAcknowledgement {
    bool received = 1;
}

message Topic {
    string name = 1;
}

message ServerMessage {
    string data = 1;
}